exercises/wordpress/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-frontend
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
    service: frontend
  type: NodePort
