exercises/wordpress/wordpress-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    app: wordpress
spec:
  rules:
    - host: ingress.minikube
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress-frontend
              servicePort: 80
